--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
-  "name": "moment-parseformat",
+  "name": "moment-parseformat-bower",
   "version": "2.1.3",
+  "description": "A moment.js plugin to extract the format of a date/time string",
   "main": "./dist/moment-parseformat.js",
   "ignore": [
     "**/.*",
